[package]
name = "rssss"
version = "0.1.1"
edition = "2021"
authors = ["davirian.yin@gmail.com"]
description = "Rsss is a tools to manager your rss sources"
license = "MIT"
homepage = "https://github.com/DaviRain-Su/rss-source/tree/main"
repository = "https://github.com/DaviRain-Su/rss-source/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
rss = { version = "2.0.6", features = ["validation"] }
structopt = "0.3.26"
xml = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
opml = "1.1.5"
git2 = "0.18.1"
